--- a/src/components/map/map.css
+++ b/src/components/map/map.css
@@ -4,6 +4,7 @@ body {
 }
 
 .map-section {
+  color: var(--black-200);
   h3 {
     padding: 15px 0 15px 30px;
     font-size: var(--fontSize22);
@@ -113,6 +114,11 @@ body {
   width: 70vw;
   background: var(--white);
   transition: translate 0.2s ease-in-out;
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+  &:-webkit-scrollbar {
+    display: none;
+  }
 
   &.side-open {
     translate: -100% 0;
@@ -166,11 +172,12 @@ body {
     }
 
     .map__search-form {
-      overflow: hidden;
       margin-top: 15px;
       border: 1px solid var(--gray-400);
       border-radius: 10px;
       font-size: var(--fontSize14);
+      box-sizing: border-box;
+      max-height: 44px;
 
       .map__search-label {
         display: flex;
@@ -179,10 +186,13 @@ body {
       }
 
       .map__search-input {
-        padding: 10px 0 10px 15px;
+        padding: 12px 0 12px 15px;
+        border-radius: 10px;
         width: 100%;
+        height: 100%;
       }
       .map__search-button {
+        border-radius: 10px;
         padding: 12px 15px;
       }
     }
@@ -200,27 +210,10 @@ body {
       }
     }
 
-    /* .map__search-list--filter {
-      position: sticky;
-      top: 115px;
-      left: 0;
-      bottom: 0;
-      z-index: 200;
-      display: flex;
-      justify-content: start;
-      gap: 5px;
-      font-size: var(--fontSize12);
-      background: var(--white);
-      color: var(--gray-500);
-
-      button {
-        padding: 15px 5px;
-      }
-    } */
-  }
-  .map__search-list--list {
-    padding-block-start: 10px;
-    li {
+    ul {
+      padding-block-start: 10px;
+    }
+    .result-item {
       display: flex;
       padding-block: 10px;
     }
@@ -267,6 +260,23 @@ body {
       overflow: hidden;
       white-space: nowrap;
       text-overflow: ellipsis;
+    }
+
+    .non-saved-item {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      padding: 20px 0;
+      font-size: var(--fontSize14);
+      font-weight: var(--semiBold);
+      color: var(--gray-500);
+
+      svg {
+        scale: 2;
+      }
+      span {
+        translate: 0 100%;
+      }
     }
   }
 }
@@ -317,7 +327,7 @@ body {
       padding: 15px 15px 0;
     }
 
-    .map__search-list--list {
+    .map__search-list {
       figure {
         gap: 10px;
       }
@@ -358,7 +368,7 @@ body {
   .map-side {
     width: 450px;
 
-    .map__search-list--list {
+    .map__search-list {
       figure {
         width: 100%;
       }
