fix : css디자인 중단점과 미디어쿼리 환경 네비게이션 테두리 변경 - 중단점 : border-radius 왼쪽 위아래 -> 왼쪽 아래에만 적용 - 미디어쿼리(768px 이하) : border-radius 오른쪽에 적용

--- a/src/components/navigation/navigation.css
+++ b/src/components/navigation/navigation.css
@@ -10,7 +10,7 @@
   display: flex;
   flex-direction: column;
   background-color: var(--white-fa);
-  border-radius: 20px 0 0 20px;
+  border-radius: 0 0 0 20px;
 }
 
 /* 로고 헤더 부분 */
@@ -135,7 +135,7 @@
   .nav__wrapper.is-open {
     max-width: 346px;
     margin: 0px;
-    border-radius: 20px 0 0 20px;
+    border-radius: 0 20px 20px 0;
   }
 
   .nav__wrapper.is-open .logo__header .nav__close {
