fix : css 불필요한 디자인 제거

--- a/src/components/exchange-rate/exchange-rate.html
+++ b/src/components/exchange-rate/exchange-rate.html
@@ -8,9 +8,8 @@
     <title>환율 컴포넌트</title>
   </head>
   <body>
-    <article class="exchange-form">
+    <article class="exchange__form">
       <h3 id="exchange-title" class="exchange-form__title">환율</h3>
-
       <div
         class="exchange-form__input-box"
         role="group"
@@ -63,8 +62,8 @@
         <div class="exchange-form__currency-amount">
           <label for="base-amount" class="sr-only">금액 입력</label>
           <input
-            type="number"
             id="base-amount"
+            type="text"
             class="exchange-form__input"
             value="0"
             min="0"
