--- a/src/components/exchange-rate/exchange-rate.css
+++ b/src/components/exchange-rate/exchange-rate.css
@@ -33,28 +33,23 @@
   background-image: url("./../../assets/svg/jp.svg");
 }
 
-/* 컨테이너 */
-.exchange-form {
+/* 환율 컨테이너 */
+.exchange__form {
   display: flex;
   flex-direction: column;
+  min-width: 309px;
   border: 1px solid var(--gray-200);
   border-radius: 15px;
   padding: 20px;
-}
-
-.exchange-form__title {
-  padding-bottom: 15px;
+  gap: 20px;
 }
 
 .exchange-form__input-box,
 .exchange-form__currency-box {
   display: flex;
-  min-width: 309px;
-  max-height: 50px;
+  height: 50px;
   border: 1px solid var(--gray-200);
   border-radius: 5px;
-  overflow: hidden;
-  margin-bottom: 16px;
 }
 
 .exchange-form__currency-select {
@@ -80,6 +75,10 @@
   width: 100%;
   height: 100%;
   cursor: pointer;
+
+  &.exchange-form__select {
+    background: var(--gray-100);
+  }
 }
 
 .exchange-form__currency-labels {
@@ -105,7 +104,6 @@
   width: 100%;
   background: transparent;
   cursor: pointer;
-  padding: 0;
   font-size: var(--fontSize11);
   font-weight: var(--semiBold);
 }
@@ -146,7 +144,6 @@
 .exchange-form__unit-text {
   color: var(--gray-500);
   font-size: var(--fontSize12);
-  margin-inline-end: 14px;
 }
 
 .exchange-form__currency-box--result .exchange-form__currency-select {
@@ -157,5 +154,4 @@
   color: var(--black-200);
   font-size: var(--fontSize15);
   font-weight: var(--semiBold);
-  margin-inline-end: 14px;
 }
