--- a/src/components/schedule/schedule.css
+++ b/src/components/schedule/schedule.css
@@ -1,7 +1,7 @@
 @import './../../styles/main.css';
 
 :root {
-  --radius: .9375rem;
+  --radius: 0.9375rem;
 }
 
 /* --------------------------------------------------------- */
@@ -54,7 +54,7 @@
 /* DAY 섹션 */
 
 .schedule__day-list {
-  border: .0625rem solid var(--gray-300);
+  border: 0.0625rem solid var(--gray-300);
   border-radius: var(--radius);
   padding: 25px;
   margin: 0;
@@ -119,7 +119,7 @@
 }
 
 /* 포커싱 */
-.schedule__checkbox:focus-visible+.schedule__custom-box {
+.schedule__checkbox:focus-visible + .schedule__custom-box {
   outline: 2px solid var(--black-100);
   outline-offset: 2px;
 }
