style : 태블릿 중단점 수치 변경

--- a/src/components/schedule/schedule.css
+++ b/src/components/schedule/schedule.css
@@ -166,7 +166,7 @@
 }
 
 /* 테블릿 */
-@media (max-width: 1279px) {
+@media (768px <= width <= 1280px) {
   .schedule {
     max-inline-size: 450px;
   }
