feat : 에티켓 컴포넌트 호출 및 index.html 배치

--- a/src/components/etiquette/etiquette.html
+++ b/src/components/etiquette/etiquette.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../../styles/main.css" />
-    <link rel="stylesheet" href="./etiquette.css" />
+    <!-- <link rel="stylesheet" href="./etiquette.css" /> -->
     <script type="module" src="./etiquette.js"></script>
     <title>에티켓</title>
   </head>
@@ -22,81 +22,98 @@
           </details>
         </div>
       </div>
-        
       <div class="etiquette__contents">
-          <button type="button" class="etiquette__nav prev" aria-label="이전 탐색">
-            <svg xmlns="http://www.w3.org/2000/svg" width="27" height="32" viewBox="0 0 27 32" fill="none">
-            <path d="M2.97308e-05 16L27 0.411544L27 31.5885L2.97308e-05 16Z" fill="#D9D9D9" fill-opacity="0.5"/>
-            </svg>
-          </button>        
-          
-            <div class="etiquette__card-container">
-              <ul class="etiquette__cards">
-                <!-- 카드 01 -->
-                <li class="etiquette__card">
-                <span class="etiquette-img card-01"></span>
-                <div class="etiquette__cardTxt">
-                  <h4>유머 있게 대화하기</h4>
-                  <p>영국인은 위트 있는 유머를 즐겨요.
-                  너무 진지한 분위기보다는
-                  편안하게 이야기 하는걸 좋아해요.
-                  다만 사적인 질문은
-                  피하는 게 좋아요.</p>
-                </div>
-                </li>
-                <!-- 카드 02 -->
-                <li class="etiquette__card">
-                <span class="etiquette-img card-02"></span>
-                <div class="etiquette__cardTxt">
-                  <h4>차례 기다리기</h4>
-                  <p>질서 있는 줄을
-                    서는 것이 중요합니다.
-                    줄을 서서 차례를
-                    참을성 있게 기다리세요.
-                  </p>
-                </div>
-                </li>
-                <!-- 카드 03 -->
-                <li class="etiquette__card">
-                <span class="etiquette-img card-03"></span>
-                <div class="etiquette__cardTxt">
-                  <h4>차 문화 존중하기</h4>
-                  <p>영국인은 티타임을
-                    중요하게 생각해요.
-                    차를 따를 땐 조용하고
-                    신중하게 행동해요.
-                    차에 우유를 넣는
-                    문화도 있으니
-                    거부감 없이 경험해보세요.
-                  </p>
-                </div>
-                </li>
-                <!-- 카드 04 -->
-                <li class="etiquette__card">
-                <span class="etiquette-img card-04"></span>
-                <div class="etiquette__cardTxt">
-                  <h4>식사 매너</h4>
-                  <p>포크는 왼손, 나이프는
-                    오른손이 기본이에요.
-                    입 안에 음식이
-                    있을 땐 말을 삼가하고
-                    계산은 보통 각자
-                    나누는 경우가 많아요.
-                  </p>
-                </div>
-                </li>
-              </ul>
-            </div>
+        <button
+          type="button"
+          class="etiquette__nav prev"
+          aria-label="이전 탐색"
+        >
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            width="27"
+            height="32"
+            viewBox="0 0 27 32"
+            fill="none"
+          >
+            <path
+              d="M2.97308e-05 16L27 0.411544L27 31.5885L2.97308e-05 16Z"
+              fill="#D9D9D9"
+              fill-opacity="0.5"
+            />
+          </svg>
+        </button>
 
-          <button type="button" class="etiquette__nav next" aria-label="다음 탐색">
-            <svg xmlns="http://www.w3.org/2000/svg" width="27" height="32" viewBox="0 0 27 32" fill="none">
-            <path d="M27 16L2.90494e-05 31.5885L3.04122e-05 0.411542L27 16Z" fill="#D9D9D9" fill-opacity="0.5"/>
-            </svg>
-          </button>
-      
+        <div class="etiquette__card-container">
+          <ul class="etiquette__cards">
+            <!-- 카드 01 -->
+            <li class="etiquette__card">
+              <span class="etiquette-img card-01"></span>
+              <div class="etiquette__cardTxt">
+                <h4>유머 있게 대화하기</h4>
+                <p>
+                  영국인은 위트 있는 유머를 즐겨요. 너무 진지한 분위기보다는
+                  편안하게 이야기 하는걸 좋아해요. 다만 사적인 질문은 피하는 게
+                  좋아요.
+                </p>
+              </div>
+            </li>
+            <!-- 카드 02 -->
+            <li class="etiquette__card">
+              <span class="etiquette-img card-02"></span>
+              <div class="etiquette__cardTxt">
+                <h4>차례 기다리기</h4>
+                <p>
+                  질서 있는 줄을 서는 것이 중요합니다. 줄을 서서 차례를 참을성
+                  있게 기다리세요.
+                </p>
+              </div>
+            </li>
+            <!-- 카드 03 -->
+            <li class="etiquette__card">
+              <span class="etiquette-img card-03"></span>
+              <div class="etiquette__cardTxt">
+                <h4>차 문화 존중하기</h4>
+                <p>
+                  영국인은 티타임을 중요하게 생각해요. 차를 따를 땐 조용하고
+                  신중하게 행동해요. 차에 우유를 넣는 문화도 있으니 거부감 없이
+                  경험해보세요.
+                </p>
+              </div>
+            </li>
+            <!-- 카드 04 -->
+            <li class="etiquette__card">
+              <span class="etiquette-img card-04"></span>
+              <div class="etiquette__cardTxt">
+                <h4>식사 매너</h4>
+                <p>
+                  포크는 왼손, 나이프는 오른손이 기본이에요. 입 안에 음식이 있을
+                  땐 말을 삼가하고 계산은 보통 각자 나누는 경우가 많아요.
+                </p>
+              </div>
+            </li>
+          </ul>
+        </div>
+
+        <button
+          type="button"
+          class="etiquette__nav next"
+          aria-label="다음 탐색"
+        >
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            width="27"
+            height="32"
+            viewBox="0 0 27 32"
+            fill="none"
+          >
+            <path
+              d="M27 16L2.90494e-05 31.5885L3.04122e-05 0.411542L27 16Z"
+              fill="#D9D9D9"
+              fill-opacity="0.5"
+            />
+          </svg>
+        </button>
+      </div>
     </section>
-  
-
-
   </body>
 </html>
