fix : 문법 오류 수정  및 변경된 문법에 맞는 스타일 수정

--- a/src/components/map/map.css
+++ b/src/components/map/map.css
@@ -178,11 +178,12 @@ body {
       font-size: var(--fontSize14);
       box-sizing: border-box;
       max-height: 44px;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
 
       .map__search-label {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
+        flex: 1;
       }
 
       .map__search-input {
