--- a/src/components/etiquette/etiquette.html
+++ b/src/components/etiquette/etiquette.html
@@ -93,7 +93,7 @@
             <path d="M27 16L2.90494e-05 31.5885L3.04122e-05 0.411542L27 16Z" fill="#D9D9D9" fill-opacity="0.5"/>
             </svg>
           </button>
-      
+      </div>
     </section>
   
 
