--- a/src/components/schedule/schedule.css
+++ b/src/components/schedule/schedule.css
@@ -1,5 +1,3 @@
-@import './../../styles/main.css';
-
 :root {
   --radius: 0.9375rem;
 }
@@ -7,6 +5,7 @@
 /* --------------------------------------------------------- */
 /* 전체 섹션 */
 .schedule {
+  inline-size: 100%;
   max-inline-size: 514px;
 }
 
