--- a/src/components/navigation/navigation.css
+++ b/src/components/navigation/navigation.css
@@ -1,5 +1,3 @@
-@import './../../../src/styles/main.css';
-
 :root {
   --gray111: #cdcdcd;
   --medium: 400;
@@ -79,7 +77,7 @@
 /* 모바일 */
 @media (max-width: 1279px) {
   .nav__wrapper {
-    margin: 10px 15px;
+    margin-block: 10px;
     border: 1px solid var(--gray111);
     border-radius: 10px;
   }
@@ -135,7 +133,6 @@
   }
 
   .nav__wrapper.is-open {
-    max-width: 346px;
     margin: 0px;
     border-radius: 0 20px 20px 0;
     height: 100dvh;
