feat : 일정, 날씨, 환율 컴포넌트 통합 레이아웃으로 관리

--- a/src/components/schedule/schedule.css
+++ b/src/components/schedule/schedule.css
@@ -6,7 +6,7 @@
 /* 전체 섹션 */
 .schedule {
   inline-size: 100%;
-  max-inline-size: 514px;
+  /* max-inline-size: 514px; */
 }
 
 .schedule__header {
