--- a/src/components/exchange-rate/exchange-rate.css
+++ b/src/components/exchange-rate/exchange-rate.css
@@ -37,6 +37,7 @@
 .exchange-form {
   display: flex;
   flex-direction: column;
+  min-width: 250px;
   border: 1px solid var(--gray-200);
   border-radius: 15px;
   padding: 20px;
@@ -49,7 +50,6 @@
 .exchange-form__input-box,
 .exchange-form__currency-box {
   display: flex;
-  min-width: 309px;
   max-height: 50px;
   border: 1px solid var(--gray-200);
   border-radius: 5px;
@@ -59,18 +59,19 @@
 
 .exchange-form__currency-select {
   display: flex;
-  justify-content: space-between;
+  justify-content: start;
+  gap: 10px;
   background-color: var(--gray668);
   font-size: var(--fontSize11);
   font-weight: var(--semiBold);
-  width: 100px;
-  padding: 12px;
+  width: 150px;
+  padding: 6px;
   align-items: center;
   position: relative;
 }
 
 .exchange-form__currency-select--custom {
-  width: auto;
+  width: 150px;
 }
 
 .exchange-form__select {
@@ -128,11 +129,11 @@
   justify-content: center;
   background: var(--white-fa);
   border-left: 1px solid var(--gray-200);
-  padding: 12px;
   text-align: right;
 }
 
 .exchange-form__input {
+  padding-block-start: 3px;
   color: var(--black-200);
   font-size: var(--fontSize15);
   font-weight: var(--semiBold);
@@ -157,4 +158,11 @@
   font-size: var(--fontSize15);
   font-weight: var(--semiBold);
   margin-inline-end: 14px;
+}
+
+@media (min-width: 576px) {
+  .exchange-form__currency-select,
+  .exchange-form__currency-select--custom {
+    width: 90px;
+  }
 }
