style : fontSize: 2rem 추가

--- a/src/styles/common/theme.css
+++ b/src/styles/common/theme.css
@@ -43,6 +43,7 @@
   --fontSize24: 1.5rem;
   --fontSize26: 1.625rem;
   --fontSize28: 1.75rem;
+  --fontSize32: 2rem;
 
   /* font-weight */
   --light: 200;
