--- a/src/components/departure-checklist/departure-checklist.css
+++ b/src/components/departure-checklist/departure-checklist.css
@@ -4,9 +4,9 @@
   --fontSize32: 32px;
 }
 
-.checklist {
+/* .checklist {
   max-inline-size: 900px;
-}
+} */
 
 .checklist__header {
   display: flex;
@@ -143,8 +143,11 @@
 
 /* 테블릿 */
 @media (max-width: 1279px) {
-  .checklist {
+  /* .checklist {
     max-inline-size: 738px;
+  } */
+  .checklist__title {
+    font-size: var(--fontSize26);
   }
 
   .checklist__description {
@@ -163,18 +166,24 @@
       margin-block-end: 6px;
     }
 
-    @media (width > 400px) {
+    @media (min-width > 400px) {
       inline-size: 100%;
     }
   }
 }
 
-/* 모바일 */
 @media (max-width: 767px) {
-  .checklist {
-    max-inline-size: 345px;
+  .checklist__title {
+    font-size: var(--fontSize22);
   }
+  .checklist__list {
+    grid-template-columns: repeat(1, 1fr);
+    block-size: 400px;
+  }
+}
 
+/* 모바일 */
+@media (max-width: 575px) {
   .checklist__title {
     font-size: var(--fontSize22);
     text-overflow: ellipsis;
@@ -186,6 +195,7 @@
 
   .checklist__list {
     grid-template-columns: repeat(1, 1fr);
+
     block-size: 560px;
     padding: 15px;
   }
@@ -209,10 +219,6 @@
     transition: inline-size 0.2s ease-in;
 
     &:hover {
-      inline-size: 100%;
-    }
-
-    @media (width > 400px) {
       inline-size: 100%;
     }
   }
