refactor : h3 폰트 사이즈 통일, min~ / max~ 속성 삭제,

--- a/src/components/exchange-rate/exchange-rate.css
+++ b/src/components/exchange-rate/exchange-rate.css
@@ -45,6 +45,7 @@
 
 .exchange-form__title {
   padding-bottom: 15px;
+  font-size: var(--fontSize22);
 }
 
 .exchange-form__input-box,
@@ -164,5 +165,17 @@
   .exchange-form__currency-select,
   .exchange-form__currency-select--custom {
     width: 90px;
+  }
+}
+
+@media (min-width: 768px) {
+  .exchange-form__title {
+    font-size: var(--fontSize26);
+  }
+}
+
+@media (min-width: 1280px) {
+  .exchange-form__title {
+    font-size: var(--fontSize32);
   }
 }
