style : footer 배경 색상 임시 변경

--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -1,6 +1,6 @@
 footer {
   text-align: center;
-  background-color: var(--gray-100);
+  background-color: var(--white-fa);
   font-size: var(--fontSize12);
   line-height: 1.6;
   padding-block: 30px 83px;
